infra/k8s/company-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: company-mongo-depl
spec:
  replicas: 1
  selector: 
    matchLabels: 
      app: company-mongo  
  template:
    metadata:     
      labels: 
        app: company-mongo 
    spec:
      containers: 
        - name: company-mongo 
          image: mongo
---
apiVersion: v1
kind: Service
metadata: 
  name: company-mongo-srv
spec:
  selector:
    app: company-mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
