infra/k8s/tenant-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tenant-depl
spec:
  replicas: 2
  selector:
    matchLabels: 
      app: tenant 
  template: 
    metadata:
      labels:
        app: tenant  
    spec: 
      containers:
        - name: tenant
          image: anshadkt/tenant
---
apiVersion: v1
kind: Service
metadata:
  name: tenant-srv
spec:
  selector:
    app: tenant
  ports:
    - name: tenant
      protocol: TCP
      port: 3000
      targetPort: 3000
